Fixed image spacing

--- a/css/main.css
+++ b/css/main.css
@@ -60,8 +60,7 @@ section, summary, time, mark, audio, video {
 			-ms-transition: none !important;
 			transition: none !important;
 		}
-
-
+	
 		ul.list1{
 			list-style-type: none;
 			margin: 0;
@@ -496,6 +495,14 @@ section, summary, time, mark, audio, video {
 		list-style-type: none;
 		grid-gap: 1em;
 	}
+
+	.image3 {
+		margin-top: 1em;
+		position: relative;
+		display: flex;
+		list-style-type: none;
+		grid-gap: 1em;
+	}
 	
 	.image img {
 		display: block;
@@ -503,6 +510,14 @@ section, summary, time, mark, audio, video {
 		height: 10em;
 		border: 3px solid rgb(0, 0, 0);
 	}
+
+	.image3 img {
+		display: block;
+		width: 12em;
+		height: 10em;
+		border: 3px solid rgb(0, 0, 0);
+	}
+	
 	
 	.image2 {
 		list-style-type: none;
@@ -537,13 +552,13 @@ section, summary, time, mark, audio, video {
 		margin-bottom: 4em;
 		margin-right: 100px;
 		margin-left: 100px;
-		font-size: 14pt;
+		font-size: 16pt;
 		letter-spacing: -0.035em;
 		font-weight: bold;
 	  }
 
 	  p.p2{
-		margin-top: 1em;
+		margin-top: 0em;
 		margin-bottom: 1em;
 		margin-right: 100px;
 		margin-left: 100px;
